* add some outputs